# pyany-serde

./: .gitignore  Cargo.toml  README.md  pyproject.toml  python_typing.pyi  test_requirements.txt
.github/workflows/: CD.yml  CI.yml
python/pyany_serde/: __init__.pyi  python_serde.py
python/tests/pickling/: init_strategy.py  numpy_serde_config.py  pyany_serde_type.py
python/tests/pydantic/: init_strategy.py  numpy_serde_config.py  pyany_serde_type.py
src/: communication.rs  dyn_pyany_serde.rs  lib.rs  pyany_serde.rs  pyany_serde_type.rs  unpickling.rs
src/common/: align.rs  mod.rs  numpy_dtype_enum.rs  python_type.rs  testing.rs
src/pickling/: init_strategy.rs  mod.rs  numpy_serde_config.rs  pyany_serde_type.rs
src/pyany_serde_impl/: bool_serde.rs  bytes_serde.rs  complex_serde.rs  dataclass_serde.rs  dict_serde.rs  dynamic_serde.rs  float_serde.rs  int_serde.rs  list_serde.rs  mod.rs  numpy_dynamic_shape_serde.rs  numpy_serde.rs  numpy_static_shape_serde.rs  option_serde.rs  pickle_serde.rs  python_serde_serde.rs  set_serde.rs  string_serde.rs  tuple_serde.rs  typed_dict_serde.rs  union_serde.rs
src/pydantic/: common.rs  init_strategy.rs  mod.rs  numpy_serde_config.rs  pyany_serde_type.rs  unpickling.rs
src/tests/: common.rs  mod.rs
src/tests/pickling/: init_strategy.rs  numpy_serde_config.rs  pyany_serde_type.rs
src/tests/pydantic/: init_strategy.rs  mod.rs  numpy_serde_config.rs  pyany_serde_type.rs
