[project]
name = "pyany-serde"
dynamic = ["version"]
requires-python = ">=3.10,<=3.14"
authors = [
    { name = "Jonathan Keegan" }
]
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.13.0",
    "typing_extensions>=4.15.0",
]

[tool.basedpyright]
reportExplicitAny = false
reportAny = false
pythonVersion = "3.10"
include = ["python"]
